<resources>
    <string name="app_name">eLearning App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_right_drawer">Right Drawer</string>
    <string name="java">JAVA</string>
    <string name="data_structure">Data Structure</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="login_account">Login Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="sql">My SQL</string>
    <string name="c">C Programming</string>
    <string name="python">Python</string>
    <string name="video_name">Video name</string>
    <string name="release_date">Release date</string>
    <string name="description_of_video">Description of video</string>
    <string name="favourite">FAVOURITE</string>
    <string name="videos">Videos</string>
</resources>
