<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">


    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/youtube_player"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/youtube_player"
        android:background="#e4e4e4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:maxLines="2"
            android:text="@string/video_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/common_black_50"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:text="@string/release_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/common_gray_txt"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:layout_marginBottom="12dp"
            android:maxLines="4"
            android:text="@string/description_of_video"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/common_gray_txt"
            android:textSize="16sp" />

    </LinearLayout>
    <!--real image size is 40x50px-->


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/title_layout"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/videos"
            android:textColor="@color/common_blue_bg" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mList_videos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <!--<ImageView-->
        <!--android:layout_width="40dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginTop="155dp"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:onClick="playVideo"-->
        <!--android:src="@drawable/play"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>
