<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_slider_mainActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                app:cardCornerRadius="3dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="1dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    />

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/data_structure"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:clickable="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_DS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/java"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:clickable="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

            </FrameLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_java"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                />
            <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/sql"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:clickable="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />
            </FrameLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_sql"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/c"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:clickable="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </FrameLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/python"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:clickable="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </FrameLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_python"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                />
        </LinearLayout>


    </ScrollView>


</LinearLayout>